@@ -6291,6 +6291,15 @@ none
 
 1.0
 
+@item Modifications:
+@table @strong
+@item 3.1
+
+Added the 'o' item to the recognized input. This change should not
+break anything.
+
+@end table
+
 @item Purpose:
 
 Allow multiple automate commands to be run from one instance of monotone.
@@ -6300,14 +6309,25 @@ Allow multiple automate commands to be run from one instance of monotone.
 @verbatim
 l6:leavese
 l7:parents40:0e3171212f34839c2e3263e7282cdeea22fc5378e
+o6:author7:Timothye l6:commite
 @end verbatim
 
 @item Input format:
 
-The input is a series of commands of the form 'l' <token> [<token> ...] 'e',
-where <token> = <size> colon <string> . Characters between the ending 'e'
-of one commad and the beginning 'l' of the next are ignored, but characters
-other than '\n' should not be present as this space is reserved.
+@verbatim
+[ 'o' <string> <string> [ <string> <string> [ ... ] ] 'e' ]
+'l' <string> [ <string> [ ... ] ] 'e'
+@end verbatim
+
+The input is a series of commands. The command name plus arguments are
+provided as 'l' <string> [<string> ...] 'e', where <string> = <size> colon
+<data> . This may optionally be preceeded by a set of key=value pairs
+(command options) as 'o' <string> <string> [<string> <string> ...] 'e', where
+strings come in pairs, key followed by value.
+
+The space between the ending 'e' of one group of strings and the beginning
+'l' or 'o' of the next is reserved. Any characters other than whitespace
+will cause an error.
 
 @item Sample output:
 
@@ -6322,6 +6342,9 @@ other than '\n' should not be present as this space is reserved.
 
 @item Output format:
 
+The output consists of one or more packets for each command.
+A packet looks like:
+
 <command number>:<err code>:<last?>:<size>:<output>
 
 <command number> is a decimal number specifying which command this output
@@ -6334,22 +6357,19 @@ if there is more output to come.
 
 <size> is the number of bytes in the output.
 
-<output> is the output of the command. This will never exceed the
-maximum chunk size, which is 1024 bytes per default and can be
-adjusted using the @option{--automate-stdio-size} option.  If a
-command produces more bytes of output than fit into one chunk, it will
-be split into multiple pieces, with all but the last having the
-<last?> field set to 'm'.
+<output> is a piece of the output of the command.
+
+All but the last packet for a given command will have the
+<last?> field set to 'm'. 
 
 @item Error conditions:
 
-If a badly formatted command is received, prints an error message to
+If a badly formatted or invalid command is received, or a command is
+given with invalid arguments or options, prints an error message to
 standard error and exits with nonzero status. Errors in the commands run
 through this interface do not affect the exit status. Instead, the <err code>
 field in the output is set to 2, and the output of the command becomes
-whatever error message would have been given. The output of an invalid
-command line will have an error code of 1, and the output text will be a help
-message.
+whatever error message would have been given.
 
 @end table
 
