@@ -5,6 +5,12 @@ check(mtn("automate", "stdio"), 1, false, false, "le")
 check(mtn("automate", "stdio"), 1, false, false, "l")
 check(mtn("automate", "stdio"), 1, false, false, "l5:a")
 check(mtn("automate", "stdio"), 1, false, false, "l5:aaaaaaaa")
+check(mtn("automate", "stdio"), 1, false, false, "xl6:leavese")
+check(mtn("automate", "stdio"), 1, false, false, "o3:key0:exl6:leavese")
+check(mtn("automate", "stdio"), 1, false, false, "o3:ke0:el6:leavese")
+
+-- not broken
+check(mtn("automate", "stdio"), 0, false, false, "o3:key0:el6:leavese")
 
 function parse_stdio(dat, which)
   local got = {}
